--- a/PRODIGY_WD_04/index.html
+++ b/PRODIGY_WD_04/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>karthik's website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Soorya Dev's website</title>
+    <link rel="stylesheet" href="style1.css">
    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <header>
         <nav><div class="left">
-            Karthik's Portfolio
+            Soorya Dev's Portfolio
         </div>
         <div class="right">
             <li><a href="/">Home </a></li>
@@ -21,11 +21,11 @@
             <li class="dropdown">
               <a href="javascript:void(0)" class="dropbtn">Contact Me</a>
               <ul class="dropdown-content">
-                <li><a href="https://www.linkedin.com/in/karthik-s-s-29b098363/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/soorya-dev-b3534332b" target="_blank">LinkedIn</a></li>
                 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-                <li><a href="https://github.com/Karthik20643" target="_blank">GitHub</a></li>
-                <li><a href="tel:1234567890">Phone: 1234567890</a></li>
-                <li><a href="mailto:karthikss8590@gmail.com">Email: karthikss8590@gmail.com</a></li>
+                <li><a href="https://github.com/SooryaDevil" target="_blank">GitHub</a></li>
+                <li><a href="tel:+91 9876543210">Phone:+91 987654321</a></li>
+                <li><a href="mailto:sooryadev@gmail.com">Email: sooryadev@gmail.com</a></li>
               </ul>
             </li>
         </div></nav>
@@ -35,7 +35,7 @@
        <section class="first">
         <div class="leftsection">
           Hi , My name is <br>
-          <span class="colorchange">Karthik</span> <br>
+          <span class="colorchange">Soorya Dev</span> <br>
           and I am <br>
           <span id="element"></span>
           <div class="button-group">
@@ -90,7 +90,7 @@
     <footer class="footer">
   <div class="footer-container">
     <div class="footer-col">
-      <strong>Karthik's Developer<br>Portfolio</strong>
+      <strong>Soorya Dev's Developer<br>Portfolio</strong>
     </div>
     <div class="footer-col">
       <ul>
@@ -118,7 +118,7 @@
     </div>
   </div>
   <div class="footer-bottom">
-    Copyright © karthiksportfolio.com | All rights reserved
+    Copyright © SooryaDevsportfolio.com | All rights reserved
   </div>
 </footer>
       <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
